custom backend validation in process

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -86,3 +86,9 @@ menu.logout=Logout
 menu.sign=Sign in
 menu.remember=Remember me
 menu.forgot=Forgot password?
+
+
+
+required.password = Password is required!
+required.passwordConfirm = Confirm password is required!
+notmatch.password = Password and Conform password is not match!
