--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -86,3 +86,8 @@ menu.logout=Выйти
 menu.sign=Войти
 menu.remember=Запомнить меня
 menu.forgot=Забыли пароль?
+
+
+required.password = Пароль обязательное поле!
+required.passwordConfirm = Подтвердите пароль!
+notmatch.password = Пароли не совпадают!
