--- a/src/main/resources/messages_uk.properties
+++ b/src/main/resources/messages_uk.properties
@@ -86,3 +86,8 @@ menu.logout=Вийти
 menu.sign=Увійти
 menu.remember=Запам'ятати мене
 menu.forgot=Забули пароль?
+
+
+required.password = Пароль обов'язкове поле!
+required.passwordConfirm = Підтвердіть пароль!
+notmatch.password = Паролі не співпадають!
