Checkstyled. Left side genres. Fix bugs. UI

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -54,7 +54,7 @@ person.confirmpass=Confirm Password
 button.edit=Edit
 button.delete=Delete
 button.cancel=Cancel
-button.login=Login
+button.login=Log in
 button.reg=Register
 button.return=Return
 button.issue=Issue
@@ -83,12 +83,16 @@ menu.mbooks=My books
 menu.books=Books
 menu.users=Users
 menu.logout=Logout
-menu.sign=Sign in
+menu.sign=Login
 menu.remember=Remember me
 menu.forgot=Forgot password?
 
 
 
 required.password = Password is required!
-required.passwordConfirm = Confirm password is required!
+required.confirmPassword = Confirm password is required!
 notmatch.password = Password and Conform password is not match!
+NotEmpty.registration.email=Email is required field!
+Email.registration.email=Not a well-formed email address!
+Size.registration.password=Password size must be between 4 and 20!
+exist.email=This email address is already exist!
