--- a/src/main/resources/messages_uk.properties
+++ b/src/main/resources/messages_uk.properties
@@ -83,11 +83,15 @@ menu.mbooks=Мої книжки
 menu.books=Книжки
 menu.users=Користувачі
 menu.logout=Вийти
-menu.sign=Увійти
+menu.sign=Вхід
 menu.remember=Запам'ятати мене
 menu.forgot=Забули пароль?
 
 
 required.password = Пароль обов'язкове поле!
-required.passwordConfirm = Підтвердіть пароль!
+required.confirmPassword = Підтвердіть пароль!
 notmatch.password = Паролі не співпадають!
+NotEmpty.registration.email=Email є обов'язковим для заповнення!
+Email.registration.email=Невірний формат електронної пошти!
+Size.registration.password=Довжина паролю повинна бути від 4 до 20 символів!
+exist.email=Введенй Email уже зареєстрований в системі!
