--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -18,6 +18,7 @@ person.term=Term
 person.confirm=Confirm
 person.days=Days to return: 
 
+
 book.all=All books
 book.issuetd=To issue today
 book.issueph=To issue per hour
@@ -41,7 +42,7 @@ book.description=Description
 book.newbook=New Book
 book.deletebook=Delete book
 book.addedit=Add/Edit book
-
+book.order=Order date
 
 
 reg.registration=Registration
@@ -59,6 +60,9 @@ button.reg=Register
 button.return=Return
 button.issue=Issue
 button.save=Save
+button.order=Create order
+button.changepass=Change Password
+button.savechanges=Save changes
 
 title.login=Sign in page
 title.reg=Registration page
@@ -74,6 +78,11 @@ message.book=Book:
 message.user=User: 
 message.bookplace=Book place: 
 message.notconfirmed=User is not confirmed! 
+message.accprop=Account properties
+message.orders=Current orders
+message.cart=Add to wishlist
+message.ordernow=Order now
+
 
 menu.home=Home
 menu.registration=Registration
@@ -86,8 +95,12 @@ menu.logout=Logout
 menu.sign=Login
 menu.remember=Remember me
 menu.forgot=Forgot password?
+menu.mybooks=My books
 
 
+pass.old= Old password
+pass.new= Enter new password
+pass.confirm = Confirm new password
 
 required.password = Password is required!
 required.confirmPassword = Confirm password is required!
