--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -42,7 +42,7 @@ book.description=Описание
 book.newbook=Новая книга
 book.deletebook=Удалить книгу
 book.addedit=Додать/Редактировать книгу
-
+book.order=Дата заказа
 
 reg.registration=Регистрация
 person.pass=Пароль
@@ -57,7 +57,9 @@ button.reg=Зарегистрироватся
 button.return=Возврат
 button.issue=Выдать
 button.save=Сохранить
-
+button.order=Заказать
+button.changepass=Сменить пароль
+button.savechanges=Сохранить изменения
 
 title.login=Страница входа
 title.reg=Страница регистрации
@@ -73,7 +75,10 @@ message.book=Книга:
 message.user=Пользователь: 
 message.bookplace=Место размещения:
 message.notconfirmed=Пользователь не подтвержден!  
-
+message.accprop=Свойства аккаунта
+message.orders=Мои заказы
+message.cart=Добавить в список желаний
+message.ordernow=Заказать сейчас
 
 menu.home=Главная
 menu.registration=Регистрация
@@ -86,6 +91,12 @@ menu.logout=Выйти
 menu.sign=Вход
 menu.remember=Запомнить меня
 menu.forgot=Забыли пароль?
+menu.mybooks=Мои книги
+
+
+pass.old= Введите старый пароль
+pass.new= Введите новый парол
+pass.confirm = Подтвердите новый пароль
 
 
 required.password = Пароль обязательное поле!
