--- a/src/main/resources/messages_uk.properties
+++ b/src/main/resources/messages_uk.properties
@@ -42,6 +42,7 @@ book.description=Опис
 book.newbook=Нова книга
 book.deletebook=Видалити книгу
 book.addedit=Додати/Редагувати книгу
+book.order=Дата замовлення
 
 
 reg.registration=Реєстрація
@@ -57,7 +58,9 @@ button.reg=Зареєструватись
 button.return=Повернути
 button.issue=Видати
 button.save=Зберегти
-
+button.order=Замовити
+button.changepass=Поміняти пароль
+button.savechanges=Зберегти зміни
 
 title.login=Сторінка входу
 title.reg=Сторінка реєстрації
@@ -73,6 +76,10 @@ message.book=Книга:
 message.user=Користувач: 
 message.bookplace=Місце знаходження: 
 message.notconfirmed=Користувач не підтверджений! 
+message.accprop=Властивості аккаунту
+message.orders=Мої замовлення
+message.cart=Додати у список побажань
+message.ordernow=Замовити зараз
 
 
 menu.orders=Замовлення
@@ -86,6 +93,12 @@ menu.logout=Вийти
 menu.sign=Вхід
 menu.remember=Запам'ятати мене
 menu.forgot=Забули пароль?
+menu.mybooks=Мої книги
+
+pass.old= Введіть старий пароль
+pass.new= Введіть новий пароль
+pass.confirm = Підтвердьте новий пароль
+
 
 
 required.password = Пароль обов'язкове поле!
