Registration confirmation. Restore password

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -59,6 +59,7 @@ button.reg=Register
 button.return=Return
 button.issue=Issue
 button.save=Save
+button.send=Send
 
 title.login=Sign in page
 title.reg=Registration page
@@ -74,6 +75,8 @@ message.book=Book:
 message.user=User: 
 message.bookplace=Book place: 
 message.notconfirmed=User is not confirmed! 
+message.remind=Password recovery
+message.mesremind=Fill in the form below. You will recieve an email with your next steps.
 
 menu.home=Home
 menu.registration=Registration
