--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -57,6 +57,7 @@ button.reg=Зарегистрироватся
 button.return=Возврат
 button.issue=Выдать
 button.save=Сохранить
+button.send=Отправить
 
 
 title.login=Страница входа
@@ -73,6 +74,8 @@ message.book=Книга:
 message.user=Пользователь: 
 message.bookplace=Место размещения:
 message.notconfirmed=Пользователь не подтвержден!  
+message.remind=Восстановление пароля
+message.mesremind=Заполните форму ниже. Вам будет отправлено письмо на email с дальнейшей инструкцией.
 
 
 menu.home=Главная
