--- a/src/main/resources/messages_uk.properties
+++ b/src/main/resources/messages_uk.properties
@@ -57,6 +57,7 @@ button.reg=Зареєструватись
 button.return=Повернути
 button.issue=Видати
 button.save=Зберегти
+button.send=Відправити
 
 
 title.login=Сторінка входу
@@ -73,6 +74,8 @@ message.book=Книга:
 message.user=Користувач: 
 message.bookplace=Місце знаходження: 
 message.notconfirmed=Користувач не підтверджений! 
+message.remind=Відновлення паролю
+message.mesremind=Заповнійть форму нижче. Вам буде відправлено листа на email з інструкцією.
 
 
 menu.orders=Замовлення
