--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -86,6 +86,7 @@ message.ordernow=Order now
 
 message.remind=Password recovery
 message.mesremind=Fill in the form below. You will recieve an email with your next steps.
+message.term = Term
 
 menu.home=Home
 menu.registration=Registration
