--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -83,7 +83,7 @@ message.cart=Добавить в список желаний
 message.ordernow=Заказать сейчас
 message.remind=Восстановление пароля
 message.mesremind=Заполните форму ниже. Вам будет отправлено письмо на email с дальнейшей инструкцией.
-
+message.term = Срок выдачи
 
 menu.home=Главная
 menu.registration=Регистрация
