--- a/src/main/resources/messages_uk.properties
+++ b/src/main/resources/messages_uk.properties
@@ -84,7 +84,7 @@ message.cart=Додати у список побажань
 message.ordernow=Замовити зараз
 message.remind=Відновлення паролю
 message.mesremind=Заповнійть форму нижче. Вам буде відправлено листа на email з інструкцією.
-
+message.term=Термін видачі
 
 menu.orders=Замовлення
 menu.home=Головна
