valid reset pass

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -112,3 +112,4 @@ NotEmpty.registration.email=Email is required field!
 Email.registration.email=Not a well-formed email address!
 Size.registration.password=Password size must be between 4 and 20!
 exist.email=This email address is already exist!
+key.notfound=Your request is not found!
