--- a/src/main/resources/messages_uk.properties
+++ b/src/main/resources/messages_uk.properties
@@ -112,3 +112,4 @@ NotEmpty.registration.email=Email є обов'язковим для заповн
 Email.registration.email=Невірний формат електронної пошти!
 Size.registration.password=Довжина паролю повинна бути від 4 до 20 символів!
 exist.email=Введенй Email уже зареєстрований в системі!
+key.notfound=Ваш запит не знайдено!
