--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -111,3 +111,4 @@ NotEmpty.registration.email=Вы не ввели Email адресс!
 Email.registration.email=Неверный формат електронной почты!
 Size.registration.password=Длинна пароля должна быть от 4 до 20 символов!
 exist.email=Введен Email уже зарегистрирован в системе!
+key.notfound=Ваш запрос не найден!
