book count added

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -43,6 +43,8 @@ book.newbook=New Book
 book.deletebook=Delete book
 book.addedit=Add/Edit book
 book.order=Order date
+book.count=Count
+book.available=Available
 
 
 reg.registration=Registration
