--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -43,6 +43,8 @@ book.newbook=Новая книга
 book.deletebook=Удалить книгу
 book.addedit=Додать/Редактировать книгу
 book.order=Дата заказа
+book.count=Количество
+book.available=В наличии
 
 reg.registration=Регистрация
 person.pass=Пароль
