--- a/src/main/resources/messages_uk.properties
+++ b/src/main/resources/messages_uk.properties
@@ -43,6 +43,8 @@ book.newbook=Нова книга
 book.deletebook=Видалити книгу
 book.addedit=Додати/Редагувати книгу
 book.order=Дата замовлення
+book.count=Кількість
+book.available=В наявності
 
 
 reg.registration=Реєстрація
