Bugs fixed. UI-improved. Librarian - done

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -85,6 +85,7 @@ message.accprop=Account properties
 message.orders=Current orders
 message.cart=Add to wishlist
 message.ordernow=Order now
+message.delete.inuse=Are you sure you want to delete order?
 
 message.remind=Password recovery
 message.mesremind=Fill in the form below. You will recieve an email with your next steps.
@@ -116,3 +117,4 @@ Email.registration.email=Not a well-formed email address!
 Size.registration.password=Password size must be between 4 and 20!
 exist.email=This email address is already exist!
 key.notfound=Your request is not found!
+NotEmpty.book.title=Title can not be empty
