--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -86,6 +86,7 @@ message.ordernow=Заказать сейчас
 message.remind=Восстановление пароля
 message.mesremind=Заполните форму ниже. Вам будет отправлено письмо на email с дальнейшей инструкцией.
 message.term = Срок выдачи
+message.delete.inuse=Вы действительно желаете удалить запись?
 
 menu.home=Главная
 menu.registration=Регистрация
@@ -114,3 +115,4 @@ Email.registration.email=Неверный формат електронной п
 Size.registration.password=Длинна пароля должна быть от 4 до 20 символов!
 exist.email=Введен Email уже зарегистрирован в системе!
 key.notfound=Ваш запрос не найден!
+NotEmpty.book.title=Книга должна иметь название
