--- a/src/main/resources/messages_uk.properties
+++ b/src/main/resources/messages_uk.properties
@@ -87,6 +87,7 @@ message.ordernow=Замовити зараз
 message.remind=Відновлення паролю
 message.mesremind=Заповнійть форму нижче. Вам буде відправлено листа на email з інструкцією.
 message.term=Термін видачі
+message.delete.inuse=Ви дійсно бажаєте видалити запис?
 
 menu.orders=Замовлення
 menu.home=Головна
@@ -115,3 +116,4 @@ Email.registration.email=Невірний формат електронної п
 Size.registration.password=Довжина паролю повинна бути від 4 до 20 символів!
 exist.email=Введенй Email уже зареєстрований в системі!
 key.notfound=Ваш запит не знайдено!
+NotEmpty.book.title=Книга повинна мати назву
