--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -66,6 +66,7 @@ button.order=Create order
 button.changepass=Change Password
 button.savechanges=Save changes
 button.send=Send
+button.action=Select
 
 title.login=Sign in page
 title.reg=Registration page
