--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -63,6 +63,7 @@ button.order=Заказать
 button.changepass=Сменить пароль
 button.savechanges=Сохранить изменения
 button.send=Отправить
+button.action=Выбрать
 
 
 title.login=Страница входа
@@ -81,7 +82,7 @@ message.bookplace=Место размещения:
 message.notconfirmed=Пользователь не подтвержден!  
 message.accprop=Свойства аккаунта
 message.orders=Мои заказы
-message.cart=Добавить в список желаний
+message.cart=В список желаний
 message.ordernow=Заказать сейчас
 message.remind=Восстановление пароля
 message.mesremind=Заполните форму ниже. Вам будет отправлено письмо на email с дальнейшей инструкцией.
