--- a/src/main/resources/messages_uk.properties
+++ b/src/main/resources/messages_uk.properties
@@ -64,6 +64,7 @@ button.order=Замовити
 button.changepass=Поміняти пароль
 button.savechanges=Зберегти зміни
 button.send=Відправити
+button.action=Вибрати
 
 
 title.login=Сторінка входу
@@ -82,7 +83,7 @@ message.bookplace=Місце знаходження:
 message.notconfirmed=Користувач не підтверджений! 
 message.accprop=Властивості аккаунту
 message.orders=Мої замовлення
-message.cart=Додати у список побажань
+message.cart=В список побажань
 message.ordernow=Замовити зараз
 message.remind=Відновлення паролю
 message.mesremind=Заповнійть форму нижче. Вам буде відправлено листа на email з інструкцією.
