Some UI changes. Pagination begin.

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -17,6 +17,8 @@ person.issuedate=Дата выдачи
 person.term=Срок
 person.confirm=Подтвердить
 person.days=Количество дней: 
+person.loginerror=Неверный E-mail или пароль
+person.loginnull= 
 
 
 book.all=Все книги
