--- a/src/main/resources/messages_uk.properties
+++ b/src/main/resources/messages_uk.properties
@@ -17,6 +17,8 @@ person.issuedate=Дата видачі
 person.term=Термін
 person.confirm=Підтвердити
 person.days=Кількість днів: 
+person.loginerror=Невырний E-mail або пароль
+person.loginnull= 
 
 
 book.all=Всі книги
