--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -82,7 +82,7 @@ message.book=Book:
 message.user=User: 
 message.bookplace=Book place: 
 message.notconfirmed=User is not confirmed! 
-message.accprop=Account properties
+message.accprop=Account
 message.orders=Current orders
 message.cart=Add to wishlist
 message.ordernow=Order now
@@ -112,6 +112,9 @@ pass.confirm = Confirm new password
 
 required.password = Password is required!
 required.confirmPassword = Confirm password is required!
+required.name = Name required!
+required.surname = Surname required!
+required.cellphone = Cell phone required!
 notmatch.password = Password and Conform password is not match!
 NotEmpty.registration.email=Email is required field!
 Email.registration.email=Not a well-formed email address!
