email client validation

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -112,6 +112,7 @@ pass.confirm = Confirm new password
 
 required.password = Password is required!
 required.confirmPassword = Confirm password is required!
+required.newPassword = New password required!
 required.name = Name required!
 required.surname = Surname required!
 required.cellphone = Cell phone required!
