genres translations new version. admin

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -19,6 +19,7 @@ person.confirm=Подтвердить
 person.days=Количество дней: 
 person.loginerror=Неверный E-mail или пароль
 person.loginnull= 
+person.role=Роль
 
 
 book.all=Все книги
