--- a/src/main/resources/messages_uk.properties
+++ b/src/main/resources/messages_uk.properties
@@ -19,6 +19,7 @@ person.confirm=Підтвердити
 person.days=Кількість днів: 
 person.loginerror=Невырний E-mail або пароль
 person.loginnull= 
+person.role=Роль
 
 
 book.all=Всі книги
