--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -19,6 +19,7 @@ person.confirm=Confirm
 person.days=Days to return: 
 person.loginerror=Error E-mail or password
 person.loginnull= 
+person.role=Role
 
 
 book.all=All books
