began rating books

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -118,6 +118,7 @@ required.newPassword = New password required!
 required.name = Name required!
 required.surname = Surname required!
 required.cellphone = Cell phone required!
+required.issueDate = Please, choose issue date!
 notmatch.password = Password and Conform password is not match!
 NotEmpty.registration.email=Email is required field!
 Email.registration.email=Not a well-formed email address!
