--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -113,6 +113,10 @@ pass.confirm = Подтвердите новый пароль
 required.password = Пароль обязательное поле!
 required.confirmPassword = Подтвердите пароль!
 required.newPassword = Введите новый пароль!
+required.name = Вы забыли указать своё имя!
+required.surname = Вы забыли указать свою фамилию!
+required.cellphone = Введите свой номер мобильного телефона
+required.issueDate = Выберите, пожалуйста, дату выдачи!
 notmatch.password = Пароли не совпадают!
 NotEmpty.registration.email=Вы не ввели Email адресс!
 Email.registration.email=Неверный формат електронной почты!
