--- a/src/main/resources/messages_uk.properties
+++ b/src/main/resources/messages_uk.properties
@@ -114,6 +114,10 @@ pass.confirm = Підтвердьте новий пароль
 required.password = Пароль обов'язкове поле!
 required.confirmPassword = Підтвердіть пароль!
 required.newPassword = Введіть новий пароль!
+required.name = Вкажіть своє ім'я!
+required.surname = Вкажіть своє прізвище!
+required.cellphone = Введіть свій номер мобільного телефону!
+required.issueDate = Будь-ласка, виберіть дату видачі!
 notmatch.password = Паролі не співпадають!
 NotEmpty.registration.email=Email є обов'язковим для заповнення!
 Email.registration.email=Невірний формат електронної пошти!
