--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -127,3 +127,5 @@ exist.email=This email address is already exist!
 key.notfound=Your request is not found!
 NotEmpty.book.title=Title can not be empty
 NotEmpty.person.email=Email is required field!
+NotEmpty.order.issueDate = Issue date is required! 
+date.expired = Sorry, this date already expired;
