--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -124,3 +124,5 @@ Size.registration.password=Длинна пароля должна быть от 
 exist.email=Введен Email уже зарегистрирован в системе!
 key.notfound=Ваш запрос не найден!
 NotEmpty.book.title=Книга должна иметь название
+NotEmpty.order.issueDate = Введите дату выдачи!
+date.expired = Дата выдачи не может быть меньше текущей
