--- a/src/main/resources/messages_uk.properties
+++ b/src/main/resources/messages_uk.properties
@@ -124,4 +124,6 @@ Email.registration.email=Невірний формат електронної п
 Size.registration.password=Довжина паролю повинна бути від 4 до 20 символів!
 exist.email=Введенй Email уже зареєстрований в системі!
 key.notfound=Ваш запит не знайдено!
-NotEmpty.book.title=Книга повинна мати назву
+NotEmpty.book.title = Книга повинна мати назву
+NotEmpty.order.issueDate = Виберіть дату видачі!
+date.expired = Дата видачі не може бути менше поточної
