--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -91,6 +91,7 @@ message.remind=Восстановление пароля
 message.mesremind=Заполните форму ниже. Вам будет отправлено письмо на email с дальнейшей инструкцией.
 message.term = Срок выдачи
 message.delete.inuse=Вы действительно желаете удалить запись?
+message.rating = Оценка
 
 menu.home=Главная
 menu.registration=Регистрация
