--- a/src/main/resources/messages_uk.properties
+++ b/src/main/resources/messages_uk.properties
@@ -92,6 +92,7 @@ message.remind=Відновлення паролю
 message.mesremind=Заповнійть форму нижче. Вам буде відправлено листа на email з інструкцією.
 message.term=Термін видачі
 message.delete.inuse=Ви дійсно бажаєте видалити запис?
+message.rating = Оцінка
 
 menu.orders=Замовлення
 menu.home=Головна
@@ -109,8 +110,6 @@ menu.mybooks=Мої книги
 pass.old= Введіть старий пароль
 pass.new= Введіть новий пароль
 pass.confirm = Підтвердьте новий пароль
-
-
 
 required.password = Пароль обов'язкове поле!
 required.confirmPassword = Підтвердіть пароль!
