--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -92,8 +92,9 @@ message.ordernow=Order now
 message.delete.inuse=Are you sure you want to delete order?
 
 message.remind=Password recovery
-message.mesremind=Fill in the form below. You will recieve an email with your next steps.
+message.mesremind=Fill in the form below. You will receive an email with your next steps.
 message.term = Term
+message.rating = Rating
 
 menu.home=Home
 menu.registration=Registration
@@ -129,4 +130,4 @@ key.notfound=Your request is not found!
 NotEmpty.book.title=Title can not be empty
 NotEmpty.person.email=Email is required field!
 NotEmpty.order.issueDate = Issue date is required! 
-date.expired = Sorry, this date already expired;
+date.expired = Sorry, this date already expired
