Fixed validators bugs. UI fixed

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -38,7 +38,7 @@ book.pages=Pages
 book.bookcase=Bookcase
 book.shelf=Shelf
 book.term=Term
-book.errordel=We cant delete this book
+book.errordel=We can't delete this book
 book.users=Users
 book.orders=Orders
 book.description=Description
@@ -92,7 +92,7 @@ message.ordernow=Order now
 message.delete.inuse=Are you sure you want to delete order?
 
 message.remind=Password recovery
-message.mesremind=Fill in the form below. You will recieve an email with your next steps.
+message.mesremind=Fill in the form below. You will receive an email with your next steps.
 message.term = Term
 
 menu.home=Home
@@ -125,8 +125,16 @@ NotEmpty.registration.email=Email is required field!
 Email.registration.email=Not a well-formed email address!
 Size.registration.password=Password size must be between 4 and 20!
 exist.email=This email address is already exist!
+exist.email.person.email=This email address is already exist!
 key.notfound=Your request is not found!
 NotEmpty.book.title=Title can not be empty
+NotEmpty.book.publication=Publication can not be empty
+NotEmpty.book.authors=Authors can not be empty
 NotEmpty.person.email=Email is required field!
+Min.book.year=Year must be not less then 1800
+Min.book.pages=Book must have at least 1 page
+Min.book.available=Book available can't be less then 0
+Min.book.count=Book count can't be less then 0
+server.error=Oh no! Unexpected error occurred!
 NotEmpty.order.issueDate = Issue date is required! 
 date.expired = Sorry, this date already expired;
