--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -121,9 +121,18 @@ required.issueDate = Выберите, пожалуйста, дату выдач
 notmatch.password = Пароли не совпадают!
 NotEmpty.registration.email=Вы не ввели Email адресс!
 Email.registration.email=Неверный формат електронной почты!
+NotEmpty.person.email=Вы не ввели Email адресс!
 Size.registration.password=Длинна пароля должна быть от 4 до 20 символов!
 exist.email=Введен Email уже зарегистрирован в системе!
+exist.email.person.email=Введен Email уже зарегистрирован в системе!
 key.notfound=Ваш запрос не найден!
 NotEmpty.book.title=Книга должна иметь название
+NotEmpty.book.publication=Поле публикация не может быть пустым
+NotEmpty.book.authors=Поле не может быть пустым
+Min.book.year=Год должен быть не менее 1800
+Min.book.pages=Книга должна иметь хотя б 1 страницу
+Min.book.available=Количество книг не может біть менее 0
+Min.book.count=Количество книг не может біть менее 0
+server.error=О нет! Возникла непредвиденная ошибка!
 NotEmpty.order.issueDate = Введите дату выдачи!
 date.expired = Дата выдачи не может быть меньше текущей
