advanced search. Some fixes.

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -138,3 +138,4 @@ Min.book.count=Book count can't be less then 0
 server.error=Oh no! Unexpected error occurred!
 NotEmpty.order.issueDate = Issue date is required! 
 date.expired = Sorry, this date already expired;
+sort.field=Sort by
