--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -137,3 +137,4 @@ Min.book.count=Количество книг не может біть менее
 server.error=О нет! Возникла непредвиденная ошибка!
 NotEmpty.order.issueDate = Введите дату выдачи!
 date.expired = Дата выдачи не может быть меньше текущей
+sort.field=Упорядочить по
