--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -141,3 +141,5 @@ NotEmpty.order.issueDate = Issue date is required!
 date.expired = Sorry, this date already expired;
 sort.field=Sort by
 date.expired = Sorry, this date already expired
+search.results=All results by request:
+search.showall=show all
