--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -138,3 +138,5 @@ server.error=О нет! Возникла непредвиденная ошибк
 NotEmpty.order.issueDate = Введите дату выдачи!
 date.expired = Дата выдачи не может быть меньше текущей
 sort.field=Упорядочить по
+search.results=Все результаты по запросу:
+search.showall=показать все
