--- a/src/main/resources/messages_uk.properties
+++ b/src/main/resources/messages_uk.properties
@@ -137,3 +137,5 @@ server.error=О ні! Виникла непередбачувана помилк
 NotEmpty.order.issueDate = Виберіть дату видачі!
 date.expired = Дата видачі не може бути менше поточної
 sort.field=Сортувати по
+search.results=Всі результати за запитом:
+search.showall=показати всі
