--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -143,3 +143,4 @@ sort.field=Sort by
 date.expired = Sorry, this date already expired
 search.results=All results by request:
 search.showall=show all
+genre.all=All
