--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -138,9 +138,9 @@ Min.book.available=Book available can't be less then 0
 Min.book.count=Book count can't be less then 0
 server.error=Oh no! Unexpected error occurred!
 NotEmpty.order.issueDate = Issue date is required! 
-date.expired = Sorry, this date already expired;
 sort.field=Sort by
 date.expired = Sorry, this date already expired
 search.results=All results by request:
 search.showall=show all
 genre.all=All
+search.advanced=Advanced search
