--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -141,3 +141,4 @@ sort.field=Упорядочить по
 search.results=Все результаты по запросу:
 search.showall=показать все
 genre.all=Все
+search.advanced=Расширенный поиск
