--- a/src/main/resources/messages_uk.properties
+++ b/src/main/resources/messages_uk.properties
@@ -17,7 +17,7 @@ person.issuedate=Дата видачі
 person.term=Термін
 person.confirm=Підтвердити
 person.days=Кількість днів: 
-person.loginerror=Невырний E-mail або пароль
+person.loginerror=Невірний E-mail або пароль
 person.loginnull= 
 person.role=Роль
 
@@ -140,3 +140,4 @@ sort.field=Сортувати по
 search.results=Всі результати за запитом:
 search.showall=показати всі
 genre.all=Всі
+search.advanced=Розширений пошук
