--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -95,6 +95,15 @@ message.remind=Password recovery
 message.mesremind=Fill in the form below. You will receive an email with your next steps.
 message.term = Term
 message.rating = Rating
+message.of = of
+message.order = Order
+message.order1 = You may took this book for
+message.order2 = You may order this book, but you must return it till 
+message.orderfail = Sorry, but you can't order this book right now.
+message.orderafter = This book will be available after
+message.issuedate = Choose issue date:
+message.failorder = You allowed take only ten books at the same time.
+message.day = day(s)
 
 menu.home=Home
 menu.registration=Registration
