--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -92,6 +92,15 @@ message.mesremind=Заполните форму ниже. Вам будет от
 message.term = Срок выдачи
 message.delete.inuse=Вы действительно желаете удалить запись?
 message.rating = Оценка
+message.of = из
+message.order = Заказать
+message.order1 = Вы можете взять эту книгу на
+message.order2 = Вы можете взять эту книгу, но обязаны вернуть её до 
+message.orderfail = Извините, эта книга сейчас недоступна
+message.orderafter = Эта книга будет в наличии после 
+message.issuedate = Выберите дату выдачи:
+message.failorder = Вы можете одновременно взять не более 10 книг
+message.day = день(дней)
 
 menu.home=Главная
 menu.registration=Регистрация
