--- a/src/main/resources/messages_uk.properties
+++ b/src/main/resources/messages_uk.properties
@@ -93,6 +93,16 @@ message.mesremind=Заповнійть форму нижче. Вам буде в
 message.term=Термін видачі
 message.delete.inuse=Ви дійсно бажаєте видалити запис?
 message.rating = Оцінка
+message.of = із
+message.order = Замовити
+message.order1 = Ви можете взяти цю книгу на
+message.order2 = Ви можете взяти цю книжку, але повинні повернути до
+message.orderfail = Вибачте, ця книга зараз не доступна
+message.orderafter = Ця книга буде в наявності після
+message.issuedate = Вибeріть дату видачі:
+message.failorder = Ви не можете одночасно брати більше 10 книг
+message.day = день(днів)
+
 
 menu.orders=Замовлення
 menu.home=Головна
