--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -48,6 +48,7 @@ book.addedit=Add/Edit book
 book.order=Order date
 book.count=Count
 book.available=Available
+book.notavailable=Not available
 
 
 reg.registration=Registration
@@ -104,6 +105,7 @@ message.orderafter = This book will be available after
 message.issuedate = Choose issue date:
 message.failorder = You allowed take only ten books at the same time.
 message.day = day(s)
+message.confirm.registration=Thank you for joining our JLibrary. Please confirm your email by clicking next link: 
 
 menu.home=Home
 menu.registration=Registration
