--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -48,6 +48,7 @@ book.addedit=Додать/Редактировать книгу
 book.order=Дата заказа
 book.count=Количество
 book.available=В наличии
+book.notavailable=Нет в наличии
 
 reg.registration=Регистрация
 person.pass=Пароль
@@ -101,6 +102,7 @@ message.orderafter = Эта книга будет в наличии после
 message.issuedate = Выберите дату выдачи:
 message.failorder = Вы можете одновременно взять не более 10 книг
 message.day = день(дней)
+message.confirm.registration = Спасибо что присоединились к нашей библиотеке. Пожалуйста, подтвердити ваш email переходом по следующей ссылке: 
 
 menu.home=Главная
 menu.registration=Регистрация
