--- a/src/main/resources/messages_uk.properties
+++ b/src/main/resources/messages_uk.properties
@@ -48,6 +48,7 @@ book.addedit=Додати/Редагувати книгу
 book.order=Дата замовлення
 book.count=Кількість
 book.available=В наявності
+book.notavailable=Немає в наявності
 
 
 reg.registration=Реєстрація
@@ -102,7 +103,7 @@ message.orderafter = Ця книга буде в наявності після
 message.issuedate = Вибeріть дату видачі:
 message.failorder = Ви не можете одночасно брати більше 10 книг
 message.day = день(днів)
-
+message.confirm.registration=Дякуємо що приєднались до нашої бібліотеки. Будь ласка, підтвердіть ваш email перейшовши по наступному посиланню: 
 
 menu.orders=Замовлення
 menu.home=Головна
