--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -88,7 +88,7 @@ message.bookplace=Book place:
 message.notconfirmed=User is not confirmed! 
 message.accprop=Account
 message.orders=Current orders
-message.cart=Add to wishlist
+message.cart=Add to wish list
 message.ordernow=Order now
 message.delete.inuse=Are you sure you want to delete order?
 
@@ -132,7 +132,7 @@ required.name = Name required!
 required.surname = Surname required!
 required.cellphone = Cell phone required!
 required.issueDate = Please, choose issue date!
-notmatch.password = Password and Conform password is not match!
+notmatch.password = Password and Confirm password is not match!
 NotEmpty.registration.email=Email is required field!
 Email.registration.email=Not a well-formed email address!
 Size.registration.password=Password size must be between 4 and 20!
