searching+advsearching+paging+bug fixed. Unused methods removed. Named queries added

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -106,6 +106,7 @@ message.issuedate = Choose issue date:
 message.failorder = You allowed take only ten books at the same time.
 message.day = day(s)
 message.confirm.registration=Thank you for joining our JLibrary. Please confirm your email by clicking next link: 
+message.restore.pass = Change your password by clicking on next link: 
 
 menu.home=Home
 menu.registration=Registration
