--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -102,7 +102,8 @@ message.orderafter = Эта книга будет в наличии после
 message.issuedate = Выберите дату выдачи:
 message.failorder = Вы можете одновременно взять не более 10 книг
 message.day = день(дней)
-message.confirm.registration = Спасибо что присоединились к нашей библиотеке. Пожалуйста, подтвердити ваш email переходом по следующей ссылке: 
+message.confirm.registration=Спасибо что присоединились к нашей библиотеке. Пожалуйста, подтвердити ваш email переходом по следующей ссылке: 
+message.restore.pass = Измените пароль, перейдя по следующей ссылке: 
 
 menu.home=Главная
 menu.registration=Регистрация
