--- a/src/main/resources/messages_uk.properties
+++ b/src/main/resources/messages_uk.properties
@@ -104,6 +104,7 @@ message.issuedate = Вибeріть дату видачі:
 message.failorder = Ви не можете одночасно брати більше 10 книг
 message.day = день(днів)
 message.confirm.registration=Дякуємо що приєднались до нашої бібліотеки. Будь ласка, підтвердіть ваш email перейшовши по наступному посиланню: 
+message.restore.pass = Ви можете змінити пароль, перейшовши за наступним посиланням: 
 
 menu.orders=Замовлення
 menu.home=Головна
