--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -71,6 +71,8 @@ button.changepass=Change Password
 button.savechanges=Save changes
 button.send=Send
 button.action=Select
+button.done=Done
+button.chEmail = Change e-mail
 
 title.login=Sign in page
 title.reg=Registration page
@@ -107,6 +109,8 @@ message.failorder = You allowed take only ten books at the same time.
 message.day = day(s)
 message.confirm.registration=Thank you for joining our JLibrary. Please confirm your email by clicking next link: 
 message.restore.pass = Change your password by clicking on next link: 
+message.chEmail = On this page you can change the e-mail address used to access the site, password recovery and other useful things.
+message.email = Your current address
 
 menu.home=Home
 menu.registration=Registration
