--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -131,8 +131,11 @@ pass.new= Enter new password
 pass.confirm = Confirm new password
 
 required.password = Password is required!
+required.password.password.password = Password is required!
 required.confirmPassword = Confirm password is required!
+required.confirmPassword.password.confirmPassword = Confirm password is required!
 required.newPassword = New password required!
+required.newPassword.password.newPassword = New password required!
 required.name = Name required!
 required.surname = Surname required!
 required.cellphone = Cell phone required!
