fixed password change

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -136,6 +136,7 @@ required.surname = Вы забыли указать свою фамилию!
 required.cellphone = Введите свой номер мобильного телефона
 required.issueDate = Выберите, пожалуйста, дату выдачи!
 notmatch.password = Пароли не совпадают!
+notmatch.password.newPassword = Пароли не совпадают!
 NotEmpty.registration.email=Вы не ввели Email адресс!
 Email.registration.email=Неверный формат електронной почты!
 NotEmpty.person.email=Вы не ввели Email адресс!
@@ -158,3 +159,5 @@ search.results=Все результаты по запросу:
 search.showall=показать все
 genre.all=Все
 search.advanced=Расширенный поиск
+wrong.password = Вы ввели неверный пароль. Попробуйте еще раз.
+password.success = Процесс смены пароля прошел успешно.
