--- a/src/main/resources/messages_uk.properties
+++ b/src/main/resources/messages_uk.properties
@@ -135,6 +135,7 @@ required.surname = Вкажіть своє прізвище!
 required.cellphone = Введіть свій номер мобільного телефону!
 required.issueDate = Будь-ласка, виберіть дату видачі!
 notmatch.password = Паролі не співпадають!
+notmatch.password.newPassword = Паролі не співпадають!
 NotEmpty.registration.email=Email є обов'язковим для заповнення!
 NotEmpty.person.email=Email є обов'язковим для заповнення!
 Email.registration.email=Невірний формат електронної пошти!
@@ -157,3 +158,5 @@ search.results=Всі результати за запитом:
 search.showall=показати всі
 genre.all=Всі
 search.advanced=Розширений пошук
+wrong.password = Ви ввели невірний пароль. Спробуйте ще раз.
+password.success = Процес зміни пароля успішно завершений.
