--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -141,6 +141,7 @@ required.surname = Surname required!
 required.cellphone = Cell phone required!
 required.issueDate = Please, choose issue date!
 notmatch.password = Password and Confirm password is not match!
+notmatch.password.newPassword = Password and Confirm password is not match!
 NotEmpty.registration.email=Email is required field!
 Email.registration.email=Not a well-formed email address!
 Size.registration.password=Password size must be between 4 and 20!
@@ -163,3 +164,5 @@ search.results=All results by request:
 search.showall=show all
 genre.all=All
 search.advanced=Advanced search
+wrong.password = You enter wrong password.
+password.success = You password updated succesfully.
