--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -136,9 +136,9 @@ required.confirmPassword = Confirm password is required!
 required.confirmPassword.password.confirmPassword = Confirm password is required!
 required.newPassword = New password required!
 required.newPassword.password.newPassword = New password required!
-required.name = Name required!
-required.surname = Surname required!
-required.cellphone = Cell phone required!
+required.name.person = Name is required!
+required.surname.person = Surname is required!
+required.cellphone.person = Cell phone number is required!
 required.issueDate = Please, choose issue date!
 notmatch.password = Password and Confirm password is not match!
 notmatch.password.newPassword = Password and Confirm password is not match!
