Tests fixed. Error pages added. UI fixed. Image uploading

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -49,6 +49,7 @@ book.order=Order date
 book.count=Count
 book.available=Available
 book.notavailable=Not available
+book.rating=Rating
 
 
 reg.registration=Registration
@@ -166,3 +167,8 @@ genre.all=All
 search.advanced=Advanced search
 wrong.password = You enter wrong password.
 password.success = You password updated succesfully.
+
+sort.froma = from A to Z
+sort.fromz = from Z to A
+sort.fromg = from greater
+sort.froml = from less
