--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -49,6 +49,7 @@ book.order=Дата заказа
 book.count=Количество
 book.available=В наличии
 book.notavailable=Нет в наличии
+book.rating=Рейтинг
 
 reg.registration=Регистрация
 person.pass=Пароль
@@ -161,3 +162,8 @@ genre.all=Все
 search.advanced=Расширенный поиск
 wrong.password = Вы ввели неверный пароль. Попробуйте еще раз.
 password.success = Процесс смены пароля прошел успешно.
+
+sort.froma = от А до Я
+sort.fromz = от Я до А
+sort.fromg = от большего
+sort.froml = от меньшего
