--- a/src/main/resources/messages_uk.properties
+++ b/src/main/resources/messages_uk.properties
@@ -49,6 +49,7 @@ book.order=Дата замовлення
 book.count=Кількість
 book.available=В наявності
 book.notavailable=Немає в наявності
+book.rating=Рейтинг
 
 
 reg.registration=Реєстрація
@@ -160,3 +161,8 @@ genre.all=Всі
 search.advanced=Розширений пошук
 wrong.password = Ви ввели невірний пароль. Спробуйте ще раз.
 password.success = Процес зміни пароля успішно завершений.
+
+sort.froma = від А до Я
+sort.fromz = від Я до А
+sort.fromg = від більшого
+sort.froml = від меншого
