--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -145,7 +145,7 @@ notmatch.password.newPassword = Password and Confirm password is not match!
 NotEmpty.registration.email=Email is required field!
 Email.registration.email=Not a well-formed email address!
 Size.registration.password=Password size must be between 4 and 20!
-exist.email=This email address is already exist!
+exist.email.person=This email address is already exist!
 exist.email.person.email=This email address is already exist!
 key.notfound=Your request is not found!
 NotEmpty.book.title=Title can not be empty
