--- a/src/main/resources/messages_uk.properties
+++ b/src/main/resources/messages_uk.properties
@@ -140,7 +140,7 @@ NotEmpty.registration.email=Email є обов'язковим для заповн
 NotEmpty.person.email=Email є обов'язковим для заповнення!
 Email.registration.email=Невірний формат електронної пошти!
 Size.registration.password=Довжина паролю повинна бути від 4 до 20 символів!
-exist.email=Введенй Email уже зареєстрований в системі!
+exist.email.person=Введенй Email уже зареєстрований в системі!
 exist.email.person.email=Введенй Email уже зареєстрований в системі!
 key.notfound=Ваш запит не знайдено!
 NotEmpty.book.title = Книга повинна мати назву
