--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -141,7 +141,7 @@ NotEmpty.registration.email=Вы не ввели Email адресс!
 Email.registration.email=Неверный формат електронной почты!
 NotEmpty.person.email=Вы не ввели Email адресс!
 Size.registration.password=Длинна пароля должна быть от 4 до 20 символов!
-exist.email=Введен Email уже зарегистрирован в системе!
+exist.email.person=Введен Email уже зарегистрирован в системе!
 exist.email.person.email=Введен Email уже зарегистрирован в системе!
 key.notfound=Ваш запрос не найден!
 NotEmpty.book.title=Книга должна иметь название
