--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -51,6 +51,11 @@ book.available=Available
 book.notavailable=Not available
 book.rating=Rating
 
+genre.add=Add genre
+genre.en=EN genre
+genre.ru=RU genre
+genre.ua=UA genre
+
 
 reg.registration=Registration
 person.pass=Password
